Use more of a mobile screen - shorter search area - scroll through logo - avoid ios addressbar on iphone

--- a/app/assets/stylesheets/partials/main_page/header/_main.scss
+++ b/app/assets/stylesheets/partials/main_page/header/_main.scss
@@ -4,8 +4,12 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height:500px;
   @extend %transitionHeight;
+  
+  height:500px;
+  @media (max-width: $screen-sm-min) {
+    height:300px;
+  }
 
   .container{ height:inherit; }
   
